# faster-python-using-julia-blogposts

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  Manifest.toml  Project.toml  README.md  gen_confus.jl  jl_reader.jl  jl_reader_c.jl  jl_reader_manual.jl  jl_reader_pure.jl  main.py  parts_analysis.py  parts_test.csv  parts_test.py  pyproject.toml  python-and-cpp.py  requirements.txt  scalability_analysis.py  scalability_test.csv  scalability_test.py
docker/: Dockerfile  README.md  build.sh  docker_test.py
post1/: Dockerfile  forwarddiff.py  linear_algebra.py
post2/: Dockerfile
post2/src/: analysis.py  experiments.py  load_functions.py  main.py  run_analysis.py  run_experiments.py  split_pandas_analysis.py
post2/src/julia/: gen_dataset.jl  jl_reader_basic.jl
post3/: Dockerfile  requirements.txt
post3/src/: analysis.py  dataset_analysis.py  experiments.py  gain_over_effort.py  split_pandas_analysis.py
post3/src/julia/: gen_confus.jl  gen_dataset.jl  jl_reader_basic.jl  jl_reader_c.jl  jl_reader_opt.jl
src/: analysis.py  experiments.py  gain_over_effort.py  load_functions.py  main.py  run_analysis.py  run_experiments.py
src/julia/: gen_confus.jl  gen_dataset.jl  jl_reader_basic.jl  jl_reader_c.jl  jl_reader_dict.jl  jl_reader_opt.jl  jl_reader_prealloc.jl
