[tool.poetry]
name = "julia-from-python"
version = "0.1.0"
description = ""
authors = ["Abel Soares Siqueira <abel.s.siqueira@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
pandas = "1.3.4"
julia = "0.5.7"

[tool.poetry.group.analysis.dependencies]
matplotlib = "3.5.0"

[tool.poetry.group.cpp]
optional = true

[tool.poetry.group.cpp.dependencies]
numpy = "1.21.4"
pybind11-global = "2.8.1"

[tool.poetry.dev-dependencies]
pytest = "5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
